# spn-gaze-intent-research

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-modal.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
docs/: real-data-integration-plan.md  robustness-feedback-validation.md  website-article-intent-stream-pipeline.md  website-demo-plan-intent-stream-pipeline.md
output/: ablation_results_synthetic.json  als_full_ablation.json  baseline_results.json  neural_results.json  rsod_full_ablation.json
scripts/: benchmark.py  download_data.py  export_to_onnx.py  modal_train.py  preprocess_eegeyenet.py  preprocess_real_data.py  run_demo.py  train.py
src/: __init__.py
src/benchmark/: __init__.py  latency.py
src/data/: __init__.py  bci2000_parser.py  eeget_loader.py  eegeyenet_loader.py
src/features/: __init__.py  artifact_rejection.py  eeg_features.py  feature_pipeline.py  gaze_features.py
src/models/: __init__.py  baseline.py  neural.py
src/streaming/: __init__.py  lsl_replay.py  realtime_inference.py
src/ui/: __init__.py  dashboard.py
tests/: test_bci2000.py  test_classifier.py  test_features.py  test_integration.py  test_loader.py
