[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "spn-gaze-intent-research"
version = "0.1.0"
description = "Gaze-Guided Intent Decoding: Real-Time EEG+Eye-Tracking Fusion Pipeline for Non-Invasive Selection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "ruff>=0.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# E501: line too long (handled by line-length above)
# F401: unused imports common in __init__ and script entry points
# E402: module level import not at top (scripts use conditional imports)
ignore = ["E501", "F401", "E402", "F541", "F841"]

[tool.ruff.lint.per-file-ignores]
# Scripts are entry points — allow star imports and unused names
"scripts/*.py" = ["F403", "F405", "F811"]
